<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff000000"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="4"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/firstNumber"
                    style="@style/editButton"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:labelFor="@+id/firstNumber" />

                <Button
                    android:id="@+id/secondNumber"
                    style="@style/editButton"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:labelFor="@+id/secondNumber" />
            </LinearLayout>

            <Button
                android:id="@+id/operationButton"
                style="@style/op_button_style"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:text="@string/plus" />
        </LinearLayout>

        <EditText
            android:id="@+id/function"
            style="@style/editButtonBorder"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/result"
                style="@style/editButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/newCircleBG" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/simplePad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="7"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" >

            <com.newcircle.testablecalculator.ColorButton
                android:id="@+id/digit7"
                style="@style/digit_button_style"
                android:text="@string/digit7" />

            <com.newcircle.testablecalculator.ColorButton
                android:id="@+id/digit8"
                style="@style/digit_button_style"
                android:text="@string/digit8" />

            <com.newcircle.testablecalculator.ColorButton
                android:id="@+id/digit9"
                style="@style/digit_button_style"
                android:text="@string/digit9" />

            <com.newcircle.testablecalculator.ColorButton
                android:id="@+id/div"
                style="@style/op_button_style"
                android:contentDescription="@string/divDesc"
                android:text="@string/div" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" >

            <com.newcircle.testablecalculator.ColorButton
                android:id="@+id/digit4"
                style="@style/digit_button_style"
                android:text="@string/digit4" />

            <com.newcircle.testablecalculator.ColorButton
                android:id="@+id/digit5"
                style="@style/digit_button_style"
                android:text="@string/digit5" />

            <com.newcircle.testablecalculator.ColorButton
                android:id="@+id/digit6"
                style="@style/digit_button_style"
                android:text="@string/digit6" />

            <com.newcircle.testablecalculator.ColorButton
                android:id="@+id/mul"
                style="@style/op_button_style"
                android:contentDescription="@string/mulDesc"
                android:text="@string/mul" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" >

            <com.newcircle.testablecalculator.ColorButton
                android:id="@+id/digit1"
                style="@style/digit_button_style"
                android:text="@string/digit1" />

            <com.newcircle.testablecalculator.ColorButton
                android:id="@+id/digit2"
                style="@style/digit_button_style"
                android:text="@string/digit2" />

            <com.newcircle.testablecalculator.ColorButton
                android:id="@+id/digit3"
                style="@style/digit_button_style"
                android:text="@string/digit3" />

            <com.newcircle.testablecalculator.ColorButton
                android:id="@+id/minus"
                style="@style/op_button_style"
                android:contentDescription="@string/minusDesc"
                android:text="@string/minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" >

            <com.newcircle.testablecalculator.ColorButton
                android:id="@+id/dot"
                style="@style/digit_button_style"
                android:contentDescription="@string/dotDesc"
                android:text="@string/dot" />

            <com.newcircle.testablecalculator.ColorButton
                android:id="@+id/digit0"
                style="@style/digit_button_style"
                android:text="@string/digit0" />

            <com.newcircle.testablecalculator.ColorButton
                android:id="@+id/clear"
                style="@style/op_button_style"
                android:contentDescription="@string/clearDesc"
                android:text="@string/clear" />

            <com.newcircle.testablecalculator.ColorButton
                android:id="@+id/plus"
                style="@style/op_button_style"
                android:contentDescription="@string/plusDesc"
                android:text="@string/plus" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>